Fix Modals center alignment bug on IE11

--- a/docs/css/spectre.css
+++ b/docs/css/spectre.css
@@ -2146,7 +2146,6 @@ code {
   border-radius: .2rem;
   box-shadow: 0 .4rem 1rem rgba(69, 77, 93, .3);
   display: block;
-  margin: 0 auto;
   padding: 0;
   text-align: left;
 }
